testing/macro-tests/tests/ui/index_field_not_found.stderr
error: index field 'missing_field' not found
  --> tests/ui/index_field_not_found.rs:18:20
   |
18 |     index(fields = "missing_field"),
   |                    ^^^^^^^^^^^^^^^
